<resources>
    <string name="app_name">LinkTo</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signin_with_google">Sign In with Google</string>
    <string name="signin_with_facebook">Sign In with Facebook</string>
    <string name="expressyourself">Express your Self ...</string>
    <string name="createapublication">Create a publication.</string>
    <string name="submit">Submit</string>
    <string name="publicationempty">The publication is empty.</string>
    <string name="publicationemptymessage">This publication seems empty. Write something or insert a link or photo to post.</string>
    <string name="emptymessage">This message seems empty. Write something or insert a link or photo to post.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="logoutmessage">Do you want to log out ?</string>
    <string name="joinnow">Join Now</string>
    <string name="empty_fields_text">Please fill in all the fields</string>
    <string name="registration_success_text">Your registration is completed with success. Please focus on your email to confirm.</string>
    <string name="like">Like</string>
    <string name="remove_like">Would you want to remove your Like ?</string>
    <string name="your_comment">Your Comment ...</string>
    <string name="comment">Comment</string>
    <string name="profile">Profile</string>
    <string name="changephoto">Do you want to update profile Photo ?</string>
    <string name="registration_failed_text">Your registration is failed. Please try to use another email.</string>
    <string name="message">Message</string>
    <string name="write_your_message">Write your message</string>
    <string name="send">Send</string>
    <string name="Profile">Profile</string>
    <string name="new_message">New Message</string>
    <string name="share">Share</string>
    <string name="share_post">Would you like to shre post ?</string>
    <string name="photovideo">Photo/Video</string>
    <string name="publish">Publish</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="edit_info">Edit info</string>
    <string name="label_name">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_email">Email</string>
    <string name="label_country">Country</string>
    <string name="label_city">city</string>
    <string name="birthdate">Birthdate</string>

</resources>
