<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="50dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/name"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/normal_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:padding="10dp">

            <EditText
                android:id="@+id/ed_login"
                android:layout_width="match_parent"
                android:text="kacem.bouzayani@gmail.com"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_login"
                android:text="kacem1234"
                android:hint="@string/password"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />

            <Button
                android:id="@+id/bt_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ed_password"
                android:layout_margin="5dp"
                android:background="@android:drawable/picture_frame"
                android:text="@string/signin" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/network_sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/normal_sign_in"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/signin_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGoogle"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/google_signin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageView"
                    android:gravity="center"
                    android:text="@string/signin_with_google"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="22sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/signin_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin_google"
                android:layout_margin="5dp"
                android:background="@color/colorFacebook"
                android:padding="3dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageViewfacebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/facebook_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageViewfacebook"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageViewfacebook"
                    android:gravity="center"
                    android:text="@string/signin_with_facebook"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="22sp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>