<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linkto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    linkto:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:drawable/picture_frame"
            android:padding="10dp">

            <com.project.linkto.customwidget.CustomTextView
                android:id="@+id/content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/createapublication"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textColor="@color/colorTextWhite50"
                android:textSize="16sp"
                linkto:ctTextFont="helvetica-neue-medium" />

            <com.project.linkto.customwidget.CustomET
                android:id="@+id/ed_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content_title"
                android:hint="@string/expressyourself"
                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <com.project.linkto.customwidget.CustomBT
                android:id="@+id/bt_submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ed_content_text"
                android:layout_margin="5dp"
                android:background="@color/colorBackButton"
                android:text="@string/submit" />
        </RelativeLayout>
    </ScrollView>

</android.support.v7.widget.CardView>